src/test/ui/parser/lex-bad-char-literals-4.stderr
error[E0762]: unterminated character literal
  --> $DIR/lex-bad-char-literals-4.rs:4:5
   |
LL |     '●
   |     ^^^^

error: character literal may only contain one codepoint
  --> $DIR/lex-bad-char-literals-4.rs:4:5
   |
LL |     '●
   |     ^^^^^
   |
help: if you meant to write a `str` literal, use double quotes
   |
LL |     "●  "/~ ERROR: unterminated character literal
   |     ^^^^^

error[E0601]: `main` function not found in crate `lex_bad_char_literals_4`
  --> $DIR/lex-bad-char-literals-4.rs:3:1
   |
LL | / static c: char =
LL | |     '●
LL | | ;
   | |_^ consider adding a `main` function to `$DIR/lex-bad-char-literals-4.rs`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0601, E0762.
For more information about an error, try `rustc --explain E0601`.
